--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,6 @@
 ...
   <body>
     <button id="changeColor"></button>
-    <script src="popup.js"></script>
+    <script src="Transparent hover navbar.js.js"></script>
   </body>
 </html>
