Translate the UI to portuguese

--- a/popup.html
+++ b/popup.html
@@ -105,11 +105,11 @@
 	</head>
 	<body>
 		<main>
-			<label for="toggle">Toggle Navbar:</label>
+			<label for="toggle">Desligar / Ligar:</label>
 			<input type="checkbox" name="toggle" id="toggle" />
 			<section class="modal">
-				<p>Please click the button to apply changes.</p>
-				<button class="modal__button">Refresh page</button>
+				<p>Clique no botão abaixo para aplicar alterações.</p>
+				<button class="modal__button">Atualizar Página</button>
 			</section>
 		</main>
 		<script src="./popup.js"></script>
